# Stock-Python

./: .gitignore  pyproject.toml
src/: main.py
src/App/: app_auth.py  app_layout.py  app_pages.py  app_style.py  app_table.py  app_window.py  login.py  loginRegister_meu_old_.py  product_description.py  product_insert.py  product_insert2.py  product_new3.py  register.py  supplier_insert.py
src/App/chart/: app_dashboard.py  chart1.py  chart_date.py  chart_together.py
src/App/features/: app_auth_login.py  app_auth_registration.py  app_header.py  app_product_description.py
src/App/page/: app_header.py  app_menu.py  app_pages.py
src/Shared/Base/: BaseController.py  BaseRepository.py
src/Shared/db/: db_conection.py
src/Views/Movements/: ListMovements.py
src/Views/Product/: ListProduct.py  ProductView.py
src/app/: app_auth.py  app_layout.py  app_pages.py  app_style.py  app_window.py  product_insert.py
src/app/features/: app_auth_login.py  app_header.py  app_menu.py  app_product_description.py  app_table.py  chart_date_quantity.py
src/controllers/: BrandController.py  CategoryController.py  ProductController.py  ProductHistoryController.py  StockController.py  StockHistoryController.py  SupplierController.py  UserController.py
src/repositories/: BrandRepository.py  CategoryRepository.py  ProductHistoryRepository.py  ProductRepository.py  StockHistoryRepository.py  StockRepository.py  SupplierRepository.py  UserRepository.py
src/shared/Base/: SharedControls.py
src/shared/Enums/: QuantityType.py  TypeResult.py
src/temp/: ListProduct.py
(+44 files in other folders)
