[tool.poetry]
name = "stock-flet"
version = "0.1.0"
description = "Basic Stock Management Project in Flet"
authors = ["Fabio Rodrigues <fabio.rod@outlook.pt>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flet = "^0.21.2"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
